Fix minor z-index bug in date popup.

--- a/drupal/themes/ecenter/css/style.css.less
+++ b/drupal/themes/ecenter/css/style.css.less
@@ -2270,7 +2270,7 @@ body.node-type-issue #results { // {{{
 #ui-datepicker-div {
   font-size: 14px;
   background: @color_white;
-  z-index: 9999;
+  z-index: 9999 !important;
   .shadow(3px; 3px; 7px; @color_grey_43;);
 }
 .ui-datepicker {
